# Simula-25

./: README.md
simula-compiler/: Cargo.toml
simula-compiler/simula-ai/: Cargo.toml
simula-compiler/simula-ai/src/: lib.rs
simula-compiler/simula-backend/: Cargo.toml
simula-compiler/simula-backend/src/: lib.rs
simula-compiler/simula-cli/: Cargo.toml
simula-compiler/simula-cli/src/: main.rs
simula-compiler/simula-frontend/: Cargo.toml
simula-compiler/simula-frontend/src/: lib.rs
simula-compiler/simula-ir/: Cargo.toml
simula-compiler/simula-ir/src/: lib.rs
simula-compiler/simula-ml/: Cargo.toml
simula-compiler/simula-ml/src/: lib.rs
simula-compiler/simula-runtime/: Cargo.toml
simula-compiler/simula-runtime/src/: lib.rs
simula-compiler/simula-sim/: Cargo.toml
simula-compiler/simula-sim/src/: lib.rs
simula-compiler/simula-tests/: Cargo.toml
simula-compiler/simula-tests/src/: lib.rs
simula-compiler/simula-verifier/: Cargo.toml
simula-compiler/simula-verifier/src/: lib.rs
supporting-docs/: compiler.md  pitch.md  spec.md
vs-code-ex/: README.md  language-configuration.json  package.json
vs-code-ex/src/: extension.ts
vs-code-ex/syntaxes/: simula.tmLanguage.json
