[package]
name = "simula-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core AI model representation and operations for Simula"
license.workspace = true

[dependencies]
# Workspace dependencies
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true

# AI-specific dependencies
ndarray.workspace = true
tch.workspace = true
tensorflow.workspace = true
rand.workspace = true
rand_distr.workspace = true
statrs.workspace = true
rayon.workspace = true

# Internal dependencies
simula-ir = { path = "../simula-ir" }
simula-runtime = { path = "../simula-runtime" } 