[package]
name = "simula-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for the Simula 2025 compiler"
license.workspace = true

[dependencies]
# Workspace dependencies
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI-specific dependencies
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11" 