[package]
name = "simula-ir"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Intermediate Representation for the Simula 2025 compiler"
license.workspace = true

[dependencies]
# Workspace dependencies
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true

# IR-specific dependencies
indexmap = "2.1"
petgraph = "0.6" 