[package]
name = "simula-ml"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Machine learning primitives and algorithms for Simula"
license.workspace = true

[dependencies]
# Workspace dependencies
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true

# ML-specific dependencies
ndarray.workspace = true
tch.workspace = true
tensorflow.workspace = true
rand.workspace = true
rand_distr.workspace = true
statrs.workspace = true
rayon.workspace = true

# Internal dependencies
simula-ai = { path = "../simula-ai" }
simula-runtime = { path = "../simula-runtime" } 