[package]
name = "simula-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Test suite for the Simula 2025 compiler"
license.workspace = true

[dependencies]
# Workspace dependencies
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true

# Test-specific dependencies
criterion = "0.5"
proptest = "1.3"
quickcheck = "1.0"
rand = "0.8"
tempfile = "3.8" 